Changelog > Refactor models structure > Refactor auth controller to improve readability > Create task controller and start work on basic CRUD operations (put and delete are left) > Update docs
